# TFG_Siglo21_Backend

./: .dockerignore  Dockerfile  README.md  alembic.ini  database.py  main.py  main_pdfplumber.py  mediciones.db  models.py  prueba.py  pyproject.toml  requirement.txt  schemas.py
Llama3_1/: Dockerfile  run-ollama.sh
alembic/: env.py
alembic/versions/: 265c15c78087_mediciones_creado_en.py  3c683e68693b_campo_tabla_mediciones.py  43ea612dee58_initial.py  50711c11f925_mediciones_fecha_aprobacion.py  9e219979c5cc_mediciones_variabels_on_delete_cascade.py  b3831a6b8c2f_tabla_usuarios.py  b7d5a9adc842_tabla_usuarios2.py
app/: main.py
app/api/v1/: mediciones.py  usuarios.py
app/core/: config.py  logging.py
app/db/: database.py
app/models/: medicion.py  usuario.py  variable.py
app/services/: medicionService.py  servicioConversion.py  servicioMedicion.py  servicioUsuario.py
