[project]
name = "mediciones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pypdf>=6.14.1",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]


